--- a/bookflight/book.css
+++ b/bookflight/book.css
@@ -164,11 +164,13 @@
 .modal {
   background-color: #fff;
   color: #000;
-  position: absolute;
-  top: 80%;
+  position: fixed;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 50%;
+  max-height: 90vh;
+  overflow-y: auto;
   border-radius: 1rem;
   z-index: 30;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
