--- a/bookflight/book.css
+++ b/bookflight/book.css
@@ -122,6 +122,7 @@
   line-height: normal;
   background-color: #F00;
   padding: .5rem 1rem;
+  text-align: center;
 }
 
 .choice p {
@@ -280,7 +281,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 410%;
+  height: 230%;
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(1px);
   z-index: 25;
