--- a/style.css
+++ b/style.css
@@ -87,13 +87,15 @@ nav::before {
   z-index: 10;
   cursor: pointer;
   font-size: 2.3rem;
+  margin-right: 10rem;
+  margin-top: 2rem;
 }
 
 .logo-box {
   border-top: 40px solid #fff;
   border-radius: 0rem 4.5rem 0rem 0rem;
   background: #FFF;
-  margin-top: -8rem;
+  margin-top: -5rem;
   width: 30%;
 }
 
