--- a/media.css
+++ b/media.css
@@ -268,7 +268,18 @@
     font-size: 2.5rem;
   }
 
+  .about {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .mission {
+    width: 100%;
+  }
+
+  .mission:not(:last-child) {
+    margin-bottom: 3rem;
+  }
 }
 
 @media only screen and (max-width: 30.3125em) {
