--- a/media.css
+++ b/media.css
@@ -296,6 +296,10 @@
   .help p {
     font-size: 1.6rem;
   }
+
+  .explore {
+    width: 80%;
+  }
 }
 
 @media only screen and (max-width: 30.3125em) {
