--- a/style.css
+++ b/style.css
@@ -410,5 +410,62 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
 }
 
 div:where(.swal2-container) div:where(.swal2-popup) {
-  width: 45em !important;
+  width: 44em !important;
+}
+
+
+.explore {
+  background-color: #fff;
+  color: #000;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  max-height: 90vh;
+  overflow-y: auto;
+  border-radius: 1rem;
+  z-index: 30;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  padding: 2rem 4rem;
+}
+
+.explore-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.explore-box:not(:last-child) {
+  margin-bottom: 3rem;
+}
+
+.explore-box img {
+  width: 46%;
+}
+
+.closet {
+  position: absolute;
+  top: 1.2rem;
+  right: 1.2rem;
+  border: none;
+  background: none;
+  color: #333;
+  font-size: 4rem;
+  cursor: pointer;
+}
+
+.omalay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 350%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(1px);
+  z-index: 25;
+}
+
+
+.hidden {
+  display: none;
 }
