--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ footer {
 footer {
   padding-bottom: 2rem;
   padding-top: 8rem;
-  background-color: #F00;
+  background-color: #0038FF;
 
 }
 
@@ -59,8 +59,8 @@ nav {
   left: 0;
   width: 100%;
   z-index: 10;
-  border-top: 40px solid red;
-  border-bottom: 30px solid red;
+  border-top: 40px solid #0038FF;
+  border-bottom: 30px solid #0038FF;
   background-color: #fff;
 }
 
@@ -82,7 +82,7 @@ nav::before {
 
 #menu-icon {
   display: none;
-  color: #F00;
+  color: #0038FF;
   /* z-index: 10001; */
   z-index: 10;
   cursor: pointer;
@@ -118,7 +118,7 @@ nav::before {
 }
 
 .nav-link {
-  color: #F00;
+  color: #0038FF;
   font-size: 2rem;
   font-style: normal;
   font-weight: 800;
@@ -149,7 +149,7 @@ nav::before {
   width: 30%;
   display: flex;
   align-items: center;
-  border: 3px solid #F00;
+  border: 3px solid #0038FF;
   padding: 2rem;
 }
 
@@ -169,7 +169,7 @@ nav::before {
 .heading-box {
   text-align: center;
   border-radius: 3.5rem;
-  border: 5px solid #F00;
+  border: 5px solid #0038FF;
   margin-top: 3.8rem;
   padding: 5rem 3rem;
 }
@@ -195,7 +195,7 @@ nav::before {
 }
 
 .heading-box h1 {
-  color: #F00;
+  color: #0038FF;
   font-size: 9.6rem;
   font-style: normal;
   font-weight: 800;
@@ -206,7 +206,7 @@ nav::before {
 }
 
 .heading-box p {
-  color: #F00;
+  color: #0038FF;
   font-size: 4.5rem;
   font-style: normal;
   font-weight: 800;
@@ -230,12 +230,12 @@ nav::before {
 
 
 .feature:not(:last-child) {
-  border-right: 6px solid #F00;
+  border-right: 6px solid #0038FF;
 
 }
 
 .feature p {
-  color: #F00;
+  color: #0038FF;
   font-size: 2.4rem;
   font-style: normal;
   font-weight: 800;
@@ -263,7 +263,7 @@ nav::before {
 }
 
 .focus-text p {
-  color: #F00;
+  color: #0038FF;
   font-size: 2rem;
   font-style: normal;
   font-weight: 800;
@@ -282,7 +282,7 @@ nav::before {
 }
 
 .mission h3 {
-  color: #F00;
+  color: #0038FF;
   font-size: 2.8rem;
   font-style: normal;
   font-weight: 800;
@@ -299,7 +299,7 @@ nav::before {
 }
 
 .help h2 {
-  color: #F00;
+  color: #0038FF;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: Inter;
   font-size: 3rem;
@@ -321,7 +321,7 @@ nav::before {
 }
 
 .help p span {
-  color: #F00;
+  color: #0038FF;
 }
 
 .trip h2 {
@@ -340,7 +340,7 @@ nav::before {
   content: "";
   width: 8.7rem;
   height: 1.2rem;
-  background-color: #F00;
+  background-color: #0038FF;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -406,7 +406,7 @@ div:where(.swal2-container) .swal2-html-container {
 }
 
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
-  background-color: #F00;
+  background-color: #0038FF;
 }
 
 div:where(.swal2-container) div:where(.swal2-popup) {
