--- a/media.css
+++ b/media.css
@@ -3,7 +3,7 @@
     width: 32%;
     display: flex;
     align-items: center;
-    border: 3px solid #F00;
+    border: 3px solid#0038FF;
     padding: 2rem 1rem;
   }
 
@@ -61,7 +61,7 @@
 
   #menu-icon i.active:before {
     content: '\f00d';
-    color: #f00;
+    color: #0038FF;
   }
 
   .heading-box h1 {
